--- a/web/index.html
+++ b/web/index.html
@@ -20,10 +20,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_application">
+  <meta name="apple-mobile-web-app-title" content="hall_of_fame">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>flutter_application</title>
+  <title>Hall of Fame</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
